fix: remove friend
